--- a/About Me.html
+++ b/About Me.html
@@ -27,7 +27,7 @@
     <table align="left">
       <tr>
         <td align="left">
-        <img src="images/self.png" height="484" align="left" border="1px" hspace="5px" width="347">
+        <img src="self.png" height="484" align="left" border="1px" hspace="5px" width="347">
         </td>
         <td class="auto-style2">
        
