--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <table style="width: 100%">
 		<tr>
 			<td class="auto-style3">
-   <img src="images/los-angeles-lakers.jpg" height="450" align="left" border="1px" hspace="5px" width="800"><span class="auto-style1">
+   <img src="los-angeles-lakers.jpg" height="450" align="left" border="1px" hspace="5px" width="800"><span class="auto-style1">
 			</span><span class="auto-style2">My name is Anthony welcome to mty 
 			website to learn mor about me check out my page for descrption of my 
 			projects and work check out my portfolio folder both located above.</span></td>
