--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title>Untitled 2</title>
-<link href="root.css" rel="stylesheet" type="text/css" />
+<link href="../root.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 .auto-style3 {
 	background-color: #F3BC37;
