--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
    		 </td>
 			<td class="auto-style3" style="height: 65px">
    		 </td>
-			<td class="auto-style3" style="height: 65px"></td>
+			<td class="auto-style3" style="height: 65px">example link</td>
 		</tr>
 		<tr>
 			<td class="auto-style3" style="height: 76px">
